2010-06-10  Diego Gonzalez  <diegohcg@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT EventSender support to graphics mouse events activation
        https://bugs.webkit.org/show_bug.cgi?id=40017

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::mouseDown):
        (EventSender::mouseUp):
        (EventSender::mouseMoveTo):
        (EventSender::keyDown):
        (EventSender::contextClick):
        (EventSender::sendTouchEvent):
        (EventSender::sendOrQueueEvent):
        (EventSender::eventFilter):
        (EventSender::createGraphicsSceneMouseEvent):
        (EventSender::sendEvent):
        * DumpRenderTree/qt/EventSenderQt.h:
        (EventSender::isGraphicsBased):

Canonical link: https://commits.webkit.org/51974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60959 268f45cc-cd09-0410-ab3c-d52691b4dbfc